# chatsh

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  chat.py  chatsh.py  flake.nix  pyproject.toml  requirements.txt  setup.py
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflow/: release-and-publish.yml
.github/workflows/: release-and-publish.yml
chatsh/: __init__.py  chat.py  chat_app.css  chat_vendors.py  chatsh.py  chatsh_textual.py  conversation.py  interaction_log.py  system.prompt  textual.py
chatsh/textual/: app.py  widgets.py
dev_tools/: chatsh-mrc
tests/: test_anthropic_chat.py  test_chatsh.py
