[tool.poetry]
name = "chatsh"
version = "0.1.2"
description = "Syntax-highlighted Claude-controlled bash."
authors = ["Xida Ren <cedar.ren@gmail.com>"]
readme = "README.md"
packages = [{include = "chatsh"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
license = "MIT"  # Assuming you're using MIT license, adjust if different

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "24.1.0"
anthropic = "0.34.1"
protobuf = "5.28.0"
tiktoken = "0.7.0"
rich = "^13.8.1"

[tool.poetry.scripts]
chatsh = "chatsh:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/renxida/chatsh"