[tool.poetry]
name = "chatsh"
version = "0.1.0"
description = ""
authors = ["Xida Ren <cedar.ren@gmail.com>"]
readme = "README.md"
packages = [{include = "chatsh"}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "24.1.0"
anthropic = "0.34.1"
protobuf = "5.28.0"
tiktoken = "0.7.0"
rich = "^13.8.1"
textual = "^0.32.0"
prompt-toolkit = "^3.0.48"

[tool.poetry.scripts]
chatsh = "chatsh:main"
chatsh-tui = "chatsh.chatsh_textual:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


