[tool.poetry]
name = "chatsh"
version = "0.3.0"
description = "Syntax-highlighted Claude-controlled bash."
authors = ["Xida Ren <cedar.ren@gmail.com>"]
readme = "README.md"
packages = [{include = "chatsh"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
license = "MIT"  # Assuming you're using MIT license, adjust if different

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
aiofiles = "24.1.0"
anthropic = "0.34.1"
protobuf = "5.28.0"
#tiktoken = "0.7.0" # may require in the future if we wanna generate estimates
rich = "^13.8.1"
prompt-toolkit = "^3.0.48"
textual = "^0.83.0"

[tool.poetry.scripts]
chatsh = "chatsh:main"
chatsh-tui = "chatsh.chatsh_textual:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
textual-dev = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.urls]
Homepage = "https://github.com/renxida/chatsh"
[tool.pytest.ini_options]
asyncio_mode = "auto"
